# codelens

./: .gitignore  README.md  docker-compose.yml  index.html
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  docs.py  files.py  fs.py  graph.py  repos.py  search.py
backend/app/models/: schemas.py
backend/app/services/: bm25_store.py  chunker.py  embedding.py  fileio.py  graph_builder.py  graph_enrich.py  indexer.py  languages.py  neo4j_store.py  ollama_client.py  prompts.py  qdrant_store.py  retriever.py  state.py  tokenize.py  ts.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalysisView.vue  ChatPanel.vue  CodeViewer.vue  DocsView.vue  FileTree.vue  GraphView.vue  IndexRepoModal.vue  MainPane.vue  Sidebar.vue  TopBar.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  ja.ts  zh.ts
frontend/src/stores/: app.ts
