[project]
name = "codelens-backend"
version = "0.1.0"
description = "CodeLens backend — local AI code retrieval & analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "sentence-transformers>=3.3",
    "FlagEmbedding>=1.3",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.3",
    "rank-bm25>=0.2.2",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
